--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -107,6 +107,10 @@ body {
     font-size: 1.4rem;
 }
 
+.icon{
+    height: 1.4rem;
+}
+
 @media (max-width: 991px) {
     #header_logo{
         width: 2rem;
