--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                  class="rounded-circle img-hover">
             <h2 class="fw-normal">{{ feature.title }}</h2>
             <p>{{ feature.description[0] }} <br>{{ feature.description[1] }}</p>
-            <p><a class="btn btn-secondary" href="#">{{ feature.buttonText }}</a></p>
+            <p><a class="btn btn-secondary" href="{{ url_for(feature.buttonLink, lang=lang) }}">{{ feature.buttonText }}</a></p>
         </div><!-- /.col-lg-4 -->
         {% endfor %}
     </div><!-- /.row -->
