--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,17 @@
 
 <div class="container marketing pt-3">
     <!-- Three columns of text below the carousel -->
-    <div id="feature_list" class="row">
+    <div id="feature_list" class="row justify-content-center">
         {% for feature in translations.home.features %}
-        <div class="col-lg-4 col-sm-6 d-flex flex-column align-items-center text-center">
-            <img src="{{ url_for('static', filename='assets/img/' ~ feature.image) }}" alt="{{ feature.altText }}"
-                 class="rounded-circle img-hover">
-            <h2 class="fw-normal">{{ feature.title }}</h2>
-            <p>{{ feature.description[0] }} <br>{{ feature.description[1] }}</p>
+        <div class="col text-center">
+            <img src="{{ url_for('static', filename='assets/img/' ~ feature.image) }}" alt="{{ feature.altText }}" class="rounded-circle img-hover">
+            <h2>{{ feature.title }}</h2>
+            <p>{{ feature.description[0] }}<br>{{ feature.description[1] }}</p>
             <p><a class="btn btn-secondary" href="{{ url_for(feature.buttonLink, lang=lang) }}">{{ feature.buttonText }}</a></p>
-        </div><!-- /.col-lg-4 -->
+        </div>
         {% endfor %}
-    </div><!-- /.row -->
+    </div>
+</div>
 
 <!-- Featurette section with large pictures with marketing text -->
 <hr class="featurette-divider">
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-5 {% if loop.index is divisibleby 2 %}order-md-1{% endif %}">
         <picture>
-            <source media="(min-width: 400px) and (max-width: 767.5px)" srcset="{{ url_for('static', filename=featurette.image.src_wide) }}"/>
+            <source media="(min-width: 430px) and (max-width: 767.5px)" srcset="{{ url_for('static', filename=featurette.image.src_wide) }}"/>
             <img src="{{ url_for('static', filename=featurette.image.src) }}" alt="{{ featurette.image.altText }}" class="img-fluid mx-auto">
         </picture>
     </div>
