--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,14 @@
     <!-- Three columns of text below the carousel -->
     <div id="feature_list" class="row justify-content-center">
         {% for feature in translations.home.features %}
-        <div class="col text-center">
+        <div class="col-lg-4 col-sm-6 text-center ">
             <img src="{{ url_for('static', filename='assets/img/' ~ feature.image) }}" alt="{{ feature.altText }}" class="rounded-circle img-hover">
             <h2>{{ feature.title }}</h2>
             <p>{{ feature.description[0] }}<br>{{ feature.description[1] }}</p>
-            <p><a class="btn btn-secondary" href="{{ url_for(feature.buttonLink, lang=lang) }}">{{ feature.buttonText }}</a></p>
+            <p ><a class="btn btn-secondary" href="{{ url_for(feature.buttonLink, lang=lang) }}">{{ feature.buttonText }}</a></p>
         </div>
         {% endfor %}
     </div>
-</div>
 
 <!-- Featurette section with large pictures with marketing text -->
 <hr class="featurette-divider">
