--- a/templates/base.html
+++ b/templates/base.html
@@ -60,10 +60,10 @@
             <ul class="navbar-nav me-auto mb-2">
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('home', lang=lang) }}">{{
                     translations.navbar.home }}</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.about }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('about', lang=lang) }}">{{ translations.navbar.about }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('contacts', lang=lang) }}">{{
                     translations.navbar.contacts }}</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">{{ translations.navbar.drinks }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('drink_menu', lang=lang) }}">{{ translations.navbar.drinks }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('gallery', lang=lang) }}">{{
                     translations.navbar.gallery }}</a></li>
             </ul>
