--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-12 col-md-6">
-                <h2 class="contact-heading">{{ contact.heading }}</h2>
+                <h2 class="heading">{{ contact.heading }}</h2>
                 {% set location = contact.location %}
                 <ul class="location_details">
                     <li class="location_detail">{{ location.address }}</li>
@@ -26,8 +26,7 @@
                 </ul>
             </div>
             <div class="col-12 col-md-6">
-                <iframe class="large-contact-content" style="border:none" src="https://en.frame.mapy.cz/s/jodapojutu"
-                        frameborder="0"></iframe>
+                <iframe class="large-contact-content" style="border:none" src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
             </div>
         </div>
     </div>
