--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block extra_styles %}
+    <!-- Custom CSS -->
+    <link href="{{ url_for('static', filename='css/index_styles.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 <!-- Poster Image -->
 <div id="poster" class="mb-5">
