--- a/static/css/drink_menu_styles.css
+++ b/static/css/drink_menu_styles.css
@@ -1,6 +1,6 @@
 .card-header-dark{
     position: relative;
-    height: 2.2rem;
+    height: 2.6rem;
 }
 .button-header {
     position: absolute;
@@ -11,6 +11,7 @@
 }
 
 .button-header {
+    font-size: 1.2rem;
     position: relative;
     padding-right: 2rem; /* Add padding to the right to avoid text overlap */
     border: none;
@@ -22,6 +23,12 @@
     background-color: #6F42C1; /* Background color */
     border-color: #b9a8e0; /* Border color on hover */
     color: #fff; /* Text color on hover */
+}
+
+.button-header.clicked {
+    background-color: #6F42C1; /* Background color on click */
+    border-color: #b9a8e0; /* Border color on click */
+    color: #fff; /* Text color on click */
 }
 
 .measure_text{
@@ -42,21 +49,24 @@
     transform: translateY(-50%);
 }
 
-.button-ingredients {
+.button-drink {
     position: relative;
     padding-right: 2rem; /* Add padding to the right to avoid text overlap */
     border: none;
     width: 100%;
     height: 100%;
 }
-
-.button-ingredients:hover {
-    background-color: #6F42C1; /* Background color */
-    border-color: #b9a8e0; /* Border color on hover */
-    color: #fff; /* Text color on hover */
+.button-style-blank {
+    position: relative;
+    padding-right: 2rem; /* Add padding to the right to avoid text overlap */
+    border: none;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Disable any click or hover interaction */
+    cursor: default; /* Change the cursor to default to indicate no interaction */
 }
 
-.button-ingredients i {
+.button-drink i {
     position: absolute;
     right: 1rem; /* Adjust as necessary */
     top: 50%;
@@ -67,3 +77,11 @@
     padding: 10px;
 }
 
+.custom-tooltip {
+    --bs-tooltip-bg: #6f42c1;
+    --bs-tooltip-color: #ffffff;
+}
+
+#info_inline{
+    font-size: 1rem;
+}
