--- a/templates/drink_menu.html
+++ b/templates/drink_menu.html
@@ -6,10 +6,11 @@
 {% endblock %}
 
 {% block content %}
-<img src="{{ url_for('static', filename='assets/img/wine.jpg') }}" class="d-block w-100 poster-img"
-     alt="">
-
 {% set drink_menu = translations.drink_menu %}
+
+<img src="{{ url_for('static', filename='assets/img/wine.jpg') }}" class="d-block w-100 poster-img"
+     alt="{{ drink_menu.altText }}">
+
 <!-- main menu -->
 <div class="container">
     <div class="row justify-content-center align-items-center">
@@ -19,20 +20,26 @@
             <div class="card">
                 <div class="card-header-dark">
                     <button class="btn button-header" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}" aria-expanded="false"
-                            aria-controls="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
+                            data-bs-target="#{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-expanded="false"
+                            aria-controls="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-label="Toggle {{ subsection.subsection_name }}">
                         {{ subsection.subsection_name }}
                         <i class="bi bi-caret-down"></i>
                     </button>
                 </div>
-                <div class="card-body pt-1 collapse" id="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
+                <div class="card-body pt-1 collapse"
+                     id="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <table class="table table-bordered mb-2">
                             <tbody>
                             {% for product in subsection.products %}
                             <tr>
-                                <td>{{ product.name }} <span class="measure_text">({{ product.measure }})</span></td>
-                                <td>{{ product.price }},-</td>
+                                <td><span class="btn button-style-blank">
+                                    {{ product.name }}
+                                    <span class="measure_text">({{ product.measure }})</span>
+                                </span></td>
+                                <td><span class="btn button-style-blank">{{ product.price }},-</span></td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -55,20 +62,28 @@
             <div class="card">
                 <div class="card-header-dark">
                     <button class="btn button-header" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}" aria-expanded="false"
-                            aria-controls="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
+                            data-bs-target="#{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-expanded="false"
+                            aria-controls="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-label="Toggle {{ subsection.subsection_name }}">
                         {{ subsection.subsection_name }}
                         <i class="bi bi-caret-down"></i>
                     </button>
                 </div>
-                <div class="card-body pt-1 collapse" id="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
+                <div class="card-body pt-1 collapse"
+                     id="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <table class="table table-bordered mb-2">
                             <tbody>
                             {% for product in subsection.products %}
                             <tr>
-                                <td>{{ product.name }} <span class="measure_text">({{ product.measure }})</span></td>
-                                <td>{{ product.price }},-</td>
+                                <td>
+                                    <span class="btn button-style-blank">
+                                        {{ product.name }}
+                                        <span class="measure_text">({{ product.measure }})</span>
+                                    </span>
+                                </td>
+                                <td><span class="btn button-style-blank">{{ product.price }},-</span></td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -93,7 +108,8 @@
                     <button class="btn button-header" type="button" data-bs-toggle="collapse"
                             data-bs-target="#{{ subsection.subsection_name | replace(' ', '_') | replace(',', '') }}"
                             aria-expanded="false"
-                            aria-controls="{{ subsection.subsection_name | replace(' ', '_') | replace(',', '') }}">
+                            aria-controls="{{ subsection.subsection_name | replace(' ', '_') | replace(',', '') }}"
+                            aria-label="Toggle {{ subsection.subsection_name }}">
                         {{ subsection.subsection_name }}
                         <i class="bi bi-caret-down"></i>
                     </button>
@@ -107,23 +123,18 @@
                             <tr>
                                 <td>
                                     {% if product.ingredients %}
-                                    <button class="btn button-ingredients" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#ingredients-{{ loop.index }}"
-                                            aria-expanded="false"
-                                            aria-controls="ingredients-{{ loop.index }}">
+                                    <button type="button" class="btn button-drink"
+                                            data-bs-toggle="tooltip" data-bs-placement="top"
+                                            data-bs-custom-class="custom-tooltip"
+                                            data-bs-title="{{ product.ingredients }}">
                                         {{ product.name }}
-                                        <i class="bi bi-info-circle"></i>
+                                        <i class="bi bi-info-circle" id="info_inline"></i>
                                     </button>
-                                    <div class="collapse" id="ingredients-{{ loop.index }}">
-                                        <div class="info-panel">
-                                            Ingredients: {{ product.ingredients }}
-                                        </div>
-                                    </div>
                                     {% else %}
-                                    <span class="product-name">{{ product.name }}</span>
+                                    <span class="btn button-style-blank">{{ product.name }}</span>
                                     {% endif %}
                                 </td>
-                                <td>{{ product.price }},-</td>
+                                <td><span class="btn button-style-blank">{{ product.price }},-</span></td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -135,7 +146,6 @@
         </div>
     </div>
 </div>
-
 
 
 {% endblock %}
