json drink section finished

--- a/templates/drink_menu.html
+++ b/templates/drink_menu.html
@@ -147,6 +147,49 @@
     </div>
 </div>
 
+{% set supplementary_sales = translations.drink_menu.supplementary_sales %}
+<div class="container">
+    <div class="row justify-content-center align-items-center">
+        <h2 class="heading mt-5 mb-3 text-center">{{ supplementary_sales.title }}</h2>
+        <div class="col-md-12 col-xl-8">
+            {% for subsection in supplementary_sales.groups %}
+            <div class="card">
+                <div class="card-header-dark">
+                    <button class="btn button-header" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-expanded="false"
+                            aria-controls="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}"
+                            aria-label="Toggle {{ subsection.subsection_name }}">
+                        {{ subsection.subsection_name }}
+                        <i class="bi bi-caret-down"></i>
+                    </button>
+                </div>
+                <div class="card-body pt-1 collapse"
+                     id="{{subsection.subsection_name | replace(' ', '_') | replace(',', '')}}">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <table class="table table-bordered mb-2">
+                            <tbody>
+                            {% for product in subsection.products %}
+                            <tr>
+                                <td>
+                                    <span class="btn button-style-blank">
+                                        {{ product.name }}
+                                        <span class="measure_text">({{ product.measure }})</span>
+                                    </span>
+                                </td>
+                                <td><span class="btn button-style-blank">{{ product.price }},-</span></td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
 
 
 
