--- a/static/css/gallery_styles.css
+++ b/static/css/gallery_styles.css
@@ -44,11 +44,11 @@
 
 .btn-ig {
      background-color: #6038a7; /* Background color on hover */
-    border-color: #d0c7f0; /* Border color */
+    border-color: var(--white-purple); /* Border color */
 }
 
 .btn-ig:hover {
-    background-color: #6F42C1; /* Background color */
+    background-color: var(--purple); /* Background color */
     border-color: #b9a8e0; /* Border color on hover */
     color: #fff; /* Text color on hover */
 }
