--- a/templates/drink_menu.html
+++ b/templates/drink_menu.html
@@ -190,7 +190,15 @@
     </div>
 </div>
 
-
+<div class="container mt-3" id="menu_disclaimer">
+    <div class="d-flex justify-content-center">
+        <ul class="mt-5 mb-0">
+            <li>Seznam alergenů u obsluhy na baru.</li>
+            <li>Veškeré nápoje jsou podávány s ledem.</li>
+            <li>Platnost od 1.8. 2017</li>
+        </ul>
+    </div>
+</div>
 
 
 {% endblock %}
