--- a/static/css/index_styles.css
+++ b/static/css/index_styles.css
@@ -17,7 +17,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(20, 0, 50, 0.4);
+    background-color: var(--purple-gray-transparent);
     height: 40%;
     width: 50%;
     display: flex;
