--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
 
 <!-- Footer -->
 <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">© 2003–{{ current_year }} Termix Praha s.r.o.</p>
         <a href="{{ url_for('home', lang=lang) }}"
            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
