--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,15 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
+
+                            <i class="bi bi-duffle-fill mb-1"></i>
+                            <table class="table table-bordered mb-2">
+                                <tbody>
+                                <tr>
+                                    <td class="address text-center">{{ info.cloakroom }}</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
