home button scrolls to top on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,3 +114,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block extra_scripts %}
+<script src="{{ url_for('static', filename='js/script_home.js') }}"></script>
+{% endblock %}
