--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,6 +34,12 @@
 footer{
     margin-top: 5rem;
 }
+
+@media (max-width: 991px) {
+    #header_logo{
+        width: 2rem;
+    }
+}
 /*base styles end*/
 
 /*shared styles*/
