--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -12,30 +12,32 @@
     <hr class="mb-0">
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <h2 class="heading">{{ contact.heading }}</h2>
-                {% set location = contact.location %}
-                <ul class="location_details">
-                    <li class="location_detail">{{ location.address }}</li>
-                    <li class="location_detail">{{ location.tram_stop.name }} - {{ location.tram_stop.distance }}</li>
-                    <li class="location_detail">
-                        {{ location.metro.name }}
-                        <img src="{{ url_for('static', filename='assets/logos/metro-a.svg') }}" alt="metro A"
-                             class="icon">
-                        - {{ location.metro.distance }}
-                    </li>
-                </ul>
-            </div>
-            <!-- Embedded map for larger screens -->
-            <div class="col-12 col-md-6  d-none d-md-block">
-                <iframe class="large-contact-content" style="border:none"
-                        src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
-            </div>
+            <div class="row">
+    <div class="col-12 col-md-6 d-flex flex-column">
+        <h2 class="heading">{{ contact.heading }}</h2>
+        {% set location = contact.location %}
+        <ul class="location_details flex-grow-1">
+            <li class="location_detail">{{ location.address }}</li>
+            <li class="location_detail">{{ location.tram_stop.name }} - {{ location.tram_stop.distance }}</li>
+            <li class="location_detail">
+                {{ location.metro.name }}
+                <img src="{{ url_for('static', filename='assets/logos/metro-a.svg') }}" alt="metro A" class="icon">
+                - {{ location.metro.distance }}
+            </li>
+        </ul>
+    </div>
+
+    <div class="col-12 col-md-6 d-flex">
+        <iframe class="large-contact-content flex-grow-1" style="border:none"
+                src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
+    </div>
+</div>
+
 
             <!-- Display button for small screens -->
             <div class="d-block d-md-none text-center mt-3">
                 <a href="https://mapy.cz/s/dodegamezo" target="_blank" class="btn btn btn-outline-purple">
-                    <i class="bi bi-geo-alt-fill"></i> View on Map
+                    <i class="bi bi-geo-alt-fill"></i> {{ location.map_button_text }}
                 </a>
             </div>
         </div>
