--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -13,25 +13,27 @@
     <div class="container mt-5">
         <div class="row">
             <div class="row">
-    <div class="col-12 col-md-6 d-flex flex-column">
-        <h2 class="heading">{{ contact.heading }}</h2>
-        {% set location = contact.location %}
-        <ul class="location_details flex-grow-1">
-            <li class="location_detail">{{ location.address }}</li>
-            <li class="location_detail">{{ location.tram_stop.name }} - {{ location.tram_stop.distance }}</li>
-            <li class="location_detail">
-                {{ location.metro.name }}
-                <img src="{{ url_for('static', filename='assets/logos/metro-a.svg') }}" alt="metro A" class="icon">
-                - {{ location.metro.distance }}
-            </li>
-        </ul>
-    </div>
+                <div class="col-12 col-md-6 d-flex flex-column">
+                    <h2 class="heading">{{ contact.heading }}</h2>
+                    {% set location = contact.location %}
+                    <ul class="location_details flex-grow-1">
+                        <li class="location_detail">{{ location.address }}</li>
+                        <li class="location_detail">{{ location.tram_stop.name }} - {{ location.tram_stop.distance }}
+                        </li>
+                        <li class="location_detail">
+                            {{ location.metro.name }}
+                            <img src="{{ url_for('static', filename='assets/logos/metro-a.svg') }}" alt="metro A"
+                                 class="icon">
+                            - {{ location.metro.distance }}
+                        </li>
+                    </ul>
+                </div>
 
-    <div class="col-12 col-md-6 d-flex">
-        <iframe class="large-contact-content flex-grow-1" style="border:none"
-                src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
-    </div>
-</div>
+                <div class="col-12 col-md-6 d-flex">
+                    <iframe class="large-contact-content flex-grow-1" style="border:none"
+                            src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
+                </div>
+            </div>
 
 
             <!-- Display button for small screens -->
