--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -12,14 +12,31 @@
 
 .location_details{
     font-size: 1.4rem;
+    margin-bottom: 3rem; /* Adjust the value as needed */
 }
 .location_detail{
-     margin-bottom: 2rem; /* Adjust the value as needed */
+     margin-bottom: 3rem; /* Adjust the value as needed */
 }
 
 .contact-heading{
     margin-bottom: 4rem; /* Adjust the value as needed */
     color: var(--cream-purple);
+}
+
+#disclaimer table {
+    width: 40%; /* Adjust the percentage as needed */
+    max-width: 600px; /* Set a maximum width if desired */
+    margin: 0 auto; /* Center the table */
+}
+
+footer{
+    margin-top: 1rem;
+}
+
+@media (max-width: 991px){
+    .location_details{
+        margin-bottom: 0; /* Adjust the value as needed */
+    }
 }
 
 @media (max-width: 767px) {
