--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -25,7 +25,6 @@
 
 #disclaimer table {
     width: 40%; /* Adjust the percentage as needed */
-    max-width: 600px; /* Set a maximum width if desired */
     margin: 0 auto; /* Center the table */
 }
 
@@ -37,6 +36,9 @@ footer{
     .location_details{
         margin-bottom: 0; /* Adjust the value as needed */
     }
+    #disclaimer table {
+    width: 80%; /* Adjust the percentage as needed */
+}
 }
 
 @media (max-width: 767px) {
