--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block extra_styles %}
-    <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='css/gallery_styles.css') }}" rel="stylesheet">
+<!-- Custom CSS -->
+<link href="{{ url_for('static', filename='css/gallery_styles.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <div class="container">
+    <h1 class="heading mt-0 text-center">Galerie</h1>
     <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
             <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
