--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 
@@ -29,9 +32,6 @@
 </head>
 
 <body>
-<!-- Include SVG Sprite -->
-<object type="image/svg+xml" data="{{ url_for('static', filename='assets/logos/svg-sprite.svg') }}"
-        style="display: none;"></object>
 
 <!-- Navbar -->
 <nav class="navbar navbar-dark bg-dark" aria-label="Navigation">
