--- a/templates/drink_menu.html
+++ b/templates/drink_menu.html
@@ -199,6 +199,8 @@
         </ul>
     </div>
 </div>
+{% endblock %}
 
-
+{% block extra_scripts %}
+<script src="{{ url_for('static', filename='js/script_drink_menu.js') }}"></script>
 {% endblock %}
