--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -33,7 +33,7 @@
                         <img class="gallery-picture" src="static/assets/gallery/01.jpg" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/02.jpeg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/02.jpg" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
                         <img class="gallery-picture" src="static/assets/gallery/03.jpg" width="100%" height="100%">
@@ -70,36 +70,38 @@
     <div class="row">
         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
             <img
-                    src="static/assets/gallery/06.jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
-            />
-
-            <img
-                    src="static/assets/gallery/07.jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
-            />
-        </div>
-
-        <div class="col-lg-4 mb-4 mb-lg-0">
-            <img
                     src="static/assets/gallery/08.jpg"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
-
+        </div>
+        <div class="col-lg-4 mb-4 mb-lg-0">
             <img
                     src="static/assets/gallery/09.jpg"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
         </div>
-
-        <div class="col-lg-4 mb-4 mb-lg-0">
-            <img
+          <div class="col-lg-4 mb-4 mb-lg-0">
+             <img
                     src="static/assets/gallery/10.jpg"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
+        </div>
 
+        <div class="col-lg-4 mb-4 mb-lg-0">
             <img
                     src="static/assets/gallery/11.jpg"
+                    class="w-100 shadow-1-strong rounded mb-4"
+            />
+        </div>
+            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+            <img
+                    src="static/assets/gallery/12.jpg"
+                    class="w-100 shadow-1-strong rounded mb-4"
+            />
+        </div>
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+            <img
+                    src="static/assets/gallery/13.jpg"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
         </div>
