about section finished

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,77 @@
 {% extends "base.html" %}
+
+{% block extra_styles %}
+<!-- Custom CSS -->
+<link href="{{ url_for('static', filename='css/about_styles.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
+
+<div class="container">
+    <!--heading-->
+    <h1 class="heading mt-0 text-center">{{ translations.about.title }}</h1>
+
+    <!--basic info-->
+    <div class="text-center">
+        <p class="about-statement"> Club Termix</p>
+        <p class="about-statement">Dance & Night Club</p>
+        <p class="about-statement">ALL ARE WELCOME! 🏳️‍🌈 ️‍</p>
+    </div>
+
+    <!--poster picture-->
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12 pride-img-frame">
+            <img src="{{ url_for('static', filename='assets/img/pride_2.jpg') }}" class="d-block" id="pride-img"
+                 alt="pride">
+        </div>
+    </div>
+
+    <!--quote-->
+    <div class="row justify-content-center" id="quote-section">
+        <div class="col-lg-6 col-md-10 col-sm-12 pride-img-frame">
+            {% set quote = translations.about.quote %}
+            <div class="text-center">
+                <p class="quote mt-0"> "{{ quote[0] }} "</p>
+                <p class="quote">" {{ quote[1] }}" </p>
+            </div>
+        </div>
+    </div>
+
+    <!--facebook button-->
+    {% set fb_button_text = translations.about.fb_button_text %}
+    <div class="row justify-content-center mt-5">
+        <div class="col-12 col-md-6 text-center">
+            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple">
+                <i class="bi bi-facebook"></i> {{ fb_button_text }}
+            </a>
+        </div>
+    </div>
+
+    <hr class="my-5">
+
+    <!--links to other bars-->
+    {% set other_bars_title = translations.about.other_bars_title %}
+    <div class="text-center">
+        <h3>{{ other_bars_title[0] }} <br> {{ other_bars_title[1] }}</h3>
+    </div>
+
+    <div class="row justify-content-center text-center mt-5">
+        <div class="col-lg-4 col-sm-6 text-center mb-2">
+            <a href="https://www.facebook.com/clubmax.cz" target="_blank">
+                <img src="{{ url_for('static', filename='assets/logos/terMax.svg') }}" alt="terMax logo"
+                     class="rounded-circle img-hover white-bg">
+            </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6 text-center">
+            <a href="https://www.facebook.com/garageprague" target="_blank">
+                <div class="circle-frame img-hover">
+                    <img src="{{ url_for('static', filename='assets/logos/garage.svg') }}" id="garage-logo"
+                         alt="terMax logo">
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
