--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,6 +70,54 @@ h1 {
     color: white; /* Text color on hover */
 }
 
+.btn-primary-purple {
+    background-color: var(--dark-purple); /* Background color on hover */
+    border-color: var(--white-purple); /* Border color */
+    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
+}
+
+.btn-primary-purple:hover {
+      background-color: var(--purple); /* Background color */
+    border-color: var(--whitey-purple); /* Border color on hover */
+    color: white; /* Text color on hover */
+}
+
+/* aniated rounded images */
+/* fast links bellow title image for title page, logos at about page */
+.rounded-circle {
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    object-fit: cover; /* Ensures the image covers the container while maintaining its aspect ratio */
+    margin-bottom: 10px;
+}
+
+.img-hover {
+    transition: transform 0.3s ease; /* Smooth transition */
+}
+
+.img-hover:hover {
+    transform: scale(1.1); /* Scale the image to 120% of its original size */
+}
+
+.circle-frame {
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    overflow: hidden;
+    display: inline-block;
+    margin-bottom: 10px;
+    background-color: white; /* Optional: for a white background inside the circle */
+}
+
+.white-bg{
+     background-color: white;
+}
+.img-fit{
+    max-width: 100%;
+}
+
+
 #disclaimer{
     color: var(--light-gray);
 }
