--- a/templates/opening_hours.html
+++ b/templates/opening_hours.html
@@ -1,20 +1,10 @@
-<table class="table table-bordered mb-2" >
+<table class="table table-bordered mb-2">
     <tbody>
+    {% for record in translations.opening_hours %}
     <tr>
-        <td>Středa</td>
-        <td>22:00 - 5:00</td>
+        <td>{{ record.day }}</td>
+        <td>{{ record.hours }}</td>
     </tr>
-    <tr>
-        <td>Čtvrtek</td>
-        <td>22:00 - 5:00</td>
-    </tr>
-    <tr>
-        <td>Pátek</td>
-        <td>22:00 - 6:00</td>
-    </tr>
-    <tr>
-        <td>Sobota</td>
-        <td>22:00 - 6:00</td>
-    </tr>
+    {% endfor %}
     </tbody>
 </table>
