--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block extra_styles %}
-    <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='css/index_styles.css') }}" rel="stylesheet">
+<!-- Custom CSS -->
+<link href="{{ url_for('static', filename='css/index_styles.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -22,8 +22,10 @@
     <div id="feature_list" class="row justify-content-center">
         {% for feature in translations.home.features %}
         <div class="col-lg-4 col-sm-6 text-center">
-            <img src="{{ url_for('static', filename='assets/img/' ~ feature.image) }}" alt="{{ feature.altText }}"
-                 class="rounded-circle img-hover">
+            <a href="{{ url_for(feature.buttonLink, lang=lang) }}">
+                <img src="{{ url_for('static', filename='assets/img/' ~ feature.image) }}" alt="{{ feature.altText }}"
+                     class="rounded-circle img-hover">
+            </a>
             <h2>{{ feature.title }}</h2>
             <p>{{ feature.description[0] }}<br>{{ feature.description[1] }}</p>
             <p><a class="btn btn-secondary" href="{{ url_for(feature.buttonLink, lang=lang) }}">{{ feature.buttonText
