center contact buttons

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -65,13 +65,13 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 text-center">
                 <h2 class="contact-heading"> {{ contact.reservations.heading }} </h2>
                 <a href="tel:+420 222 710 462" class="btn btn-outline-purple">
                     <i class="bi bi-telephone-fill"></i> +420 222 710 462
                 </a>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 text-center">
                 <h2 class="contact-heading"> Email </h2>
                 <a href="mailto:club-termix@club-termix.cz" class="btn btn-outline-purple">
                     <i class="bi bi-envelope-at-fill"></i> club-termix@club-termix.cz
