adding buttons in frame for map

--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -1,52 +1,60 @@
 .large-contact-content {
-    object-fit: cover;
-    height: 100%; /* Ensure the iframe takes full height */
-    width: 100%; /* Ensure the iframe takes full width */
+  object-fit: cover;
+  height: 100%; /* Ensure the iframe takes full height */
+  width: 100%; /* Ensure the iframe takes full width */
 }
 
 /* Optional: Ensure the text content does not overflow */
 .location_details {
-    margin-top: auto; /* Aligns the content to take up remaining space */
-    margin-bottom: auto; /* Keeps content centered */
+  margin-top: auto; /* Aligns the content to take up remaining space */
+  margin-bottom: auto; /* Keeps content centered */
 }
 
-.location_details{
-    font-size: 1.4rem;
-    margin-bottom: 3rem; /* Adjust the value as needed */
+.location_details {
+  font-size: 1.4rem;
+  margin-bottom: 3rem; /* Adjust the value as needed */
 }
-.location_detail{
-     margin-bottom: 3rem; /* Adjust the value as needed */
+.location_detail {
+  margin-bottom: 3rem; /* Adjust the value as needed */
 }
 
-.contact-heading{
-    margin-bottom: 4rem; /* Adjust the value as needed */
-    color: var(--cream-purple);
+#map-button-container {
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--cream-purple); /* Applying the border and color */
+  padding: 10px; /* Optional: Add some padding */
+  border-radius: 5px; /* Optional: Add rounded corners */
+}
+
+.contact-heading {
+  margin-bottom: 4rem; /* Adjust the value as needed */
+  color: var(--cream-purple);
 }
 
 #disclaimer table {
-    width: 40%; /* Adjust the percentage as needed */
-    margin: 0 auto; /* Center the table */
+  width: 40%; /* Adjust the percentage as needed */
+  margin: 0 auto; /* Center the table */
 }
 
-footer{
-    margin-top: 1rem;
+footer {
+  margin-top: 1rem;
 }
 
-@media (max-width: 991px){
-    .location_details{
-        margin-bottom: 0; /* Adjust the value as needed */
-    }
-    #disclaimer table {
+@media (max-width: 991px) {
+  .location_details {
+    margin-bottom: 0; /* Adjust the value as needed */
+  }
+  #disclaimer table {
     width: 80%; /* Adjust the percentage as needed */
-}
+  }
 }
 
 @media (max-width: 767px) {
-    /*homepage title text splits for smaller screens*/
-  .location_detail{
-     margin-bottom: 0; /* Adjust the value as needed */
+  /*homepage title text splits for smaller screens*/
+  .location_detail {
+    margin-bottom: 0; /* Adjust the value as needed */
   }
-  .contact-heading{
+  .contact-heading {
     margin-bottom: 1rem; /* Adjust the value as needed */
     margin-top: 1rem; /* Adjust the value as needed */
   }
