--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -29,11 +29,20 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                    <!-- Buttons to display map or open in a new window -->
+                    <div id="map-button-container" class="d-flex flex-column text-center large-contact-content">
+                        <button id="display-map-button" class="btn btn-primary mb-2">Display Map Here</button>
+                        <button id="open-new-window-button" class="btn btn-secondary">Open in New Window</button>
+                    </div>
 
-                <div class="col-12 col-md-6 d-flex">
-                    <iframe class="large-contact-content flex-grow-1 d-none d-md-block" style="border:none"
-                            src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
+                    <!-- iFrame container, hidden initially -->
+                    <div id="iframe-container" class="large-contact-content flex-grow-1 d-none">
+                        <iframe id="map-iframe" class="flex-grow-1" style="border:none;width:100%;height:400px;"
+                                src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
+                    </div>
                 </div>
+
             </div>
 
 
