map button frame

--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -26,6 +26,13 @@
   border-radius: 5px; /* Optional: Add rounded corners */
 }
 
+.map-button-text{
+    font-size: 1.1rem;
+}
+.cookie-text{
+    font-size: 1rem;
+}
+
 .contact-heading {
   margin-bottom: 4rem; /* Adjust the value as needed */
   color: var(--cream-purple);
