--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,7 @@
     --whitey-purple: #b9a8e0;
     --white-purple: #d0c7f0;
     --purple-gray-transparent: #14003266;
+    --dark-gray-purple: #696182;
     --light-gray: #AEB2B6;
 }
 
@@ -71,17 +72,16 @@ h1 {
 }
 
 .btn-primary-purple {
-    background-color: var(--dark-purple); /* Background color on hover */
-    border-color: var(--white-purple); /* Border color */
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
-}
-
-.btn-primary-purple:hover {
-      background-color: var(--purple); /* Background color */
-    border-color: var(--whitey-purple); /* Border color on hover */
+    background-color: var(--purple); /* purple */
+    border-color: var(--purple);
     color: white; /* Text color on hover */
 }
 
+.btn-primary-purple:hover {
+    background-color: var(--dark-gray-purple); /* Background color */
+    border-color: var(--dark-gray-purple); /* Border color on hover */
+    color: white; /* Text color on hover */
+}
 /* aniated rounded images */
 /* fast links bellow title image for title page, logos at about page */
 .rounded-circle {
