--- a/static/css/gallery_styles.css
+++ b/static/css/gallery_styles.css
@@ -41,3 +41,14 @@
     left: 0%;
     font-size: 2rem;
 }
+.btn-ig {
+    background-color: var(--dark-purple); /* Background color on hover */
+    border-color: var(--white-purple); /* Border color */
+    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
+}
+
+.btn-ig:hover {
+    background-color: var(--purple); /* Background color */
+    border-color: var(--whitey-purple); /* Border color on hover */
+    color: white; /* Text color on hover */
+}
