Button map description translate

--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -43,6 +43,10 @@
   margin: 0 auto; /* Center the table */
 }
 
+.bi-box-arrow-up-right{
+    margin-left: 0.3rem;
+}
+
 footer {
   margin-top: 1rem;
 }
