--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -33,14 +33,15 @@
                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center d-none d-md-block">
                     <!-- Buttons to display map or open in a new window -->
                     <div id="map-button-container" class="d-flex flex-column text-center large-contact-content ">
-                        <button id="display-map-button" class="btn btn-primary-purple mb-5">
-                            <span class="d-block map-button-text">Display map here <i
-                                    class="bi bi-geo-alt-fill"></i></span>
-                            <span class="d-block cookie-text">(uses cookies)</span>
-                        </button>
-                        <a href="https://mapy.cz/s/dodegamezo" target="_blank" id="open-new-window-button" class="btn btn-primary-purple mt-2">
+                        <button id="display-map-button" class="btn btn-outline-purple mb-5">
                             <span class="d-block map-button-text">
-                                Open in new window <i class="bi bi-box-arrow-up-right"></i>
+                                {{ location.map_frame_button_text }}
+                                <i class="bi bi-geo-alt-fill"></i></span>
+                            <span class="d-block cookie-text">({{ location.cookie_disclaimer }})</span>
+                        </button>
+                        <a href="https://mapy.cz/s/dodegamezo" target="_blank" id="open-new-window-button" class="btn btn-outline-purple mt-2">
+                            <span class="d-block map-button-text">
+                               {{ location.map_button_text }} <i class="bi bi-box-arrow-up-right"></i>
                             </span>
                         </a>
                     </div>
